tests/diagnostics/box_wrong_args.kal
# box takes exactly one argument.
{ let b: Box<i64> = box(1, 2); printi(*b); };
